# pretalx-venueless

./: MANIFEST.in  README.md  README.rst  data.json  justfile  pyproject.toml
.github/workflows/: style.yml  tests.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_5b64ac9c05ea3614___init___py.html  z_5b64ac9c05ea3614_apps_py.html  z_5b64ac9c05ea3614_forms_py.html  z_5b64ac9c05ea3614_models_py.html  z_5b64ac9c05ea3614_signals_py.html  z_5b64ac9c05ea3614_venueless_py.html  z_5b64ac9c05ea3614_views_py.html
pretalx_venueless/: apps.py  forms.py  models.py  signals.py  urls.py  venueless.py  views.py
pretalx_venueless/migrations/: 0001_initial.py  0002_data.py  0003_auto_20220721_1318.py
pretalx_venueless/templates/pretalx_venueless/: join_link.html  settings.html
tests/: conftest.py  test_main.py
