[project]
name = "pretalx-venueless"
dynamic = ["version"]
description = "Static venueless for pretalx, e.g. information, venue listings, a Code of Conduct, etc."
readme = "README.rst"
license = {text = "Apache Software License"}
keywords = ["pretalx"]
authors = [
  {name = "Tobias Kunze", email = "r@rixx.de"},
]
maintainers = [
  {name = "Tobias Kunze", email = "r@rixx.de"},
]

dependencies = [
    "PyJWT",
]

[project.urls]
homepage = "https://github.com/pretalx/pretalx-venueless"
repository = "https://github.com/pretalx/pretalx-venueless.git"

[project.entry-points."pretalx.plugin"]
pretalx_venueless = "pretalx_venueless:PretalxPluginMeta"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretalx_venueless.__version__"}

[tool.setuptools.packages.find]
include = ["pretalx*"]

[tool.check-manifest]
ignore = [".*"]

[tool.ruff.lint]
extend-select = [
  "A",  # flake8-builtins
  "B",  # flake8-bugbear
  "C4",  # Use comprehensions rather than generators
  "E",  # pycodestyle errors
  "ERA",  # Drop commented-out code
  "F",  # pyflakes
  "FURB",  # Refactoring
  "G",  # logging: formatting
  "INT",  # gettext
  "LOG",  # logging: logger
  "N",  # PEP8-naming
  "PERF",  # Performance issues
  "PGH",  # no blanket noqa
  "PIE",  # Mixed checks
  "PL",  # pylint
  "PLC0415",  # pylint: top-level imports
  "PT",  # pytest
  "PTH",  # use pathlib
  "RSE",  # raising exceptions
  "RUF",  # Ruff
  "SIM",  # Possible simplifications
  "T10",  # Catch debugger statements
  "T20",  # Catch print statements
  "TID",  # Tidy imports
  "UP",  # pyupgrade
  "W",  # pycodestyle warnings
]
ignore = [
  "E501",  # Line too long
  "PLR",  # Refactoring: Too many branches, arguments, statements, etc
  "RUF001",  # ambiguous characters
  "RUF002",  # ambiguous characters
  "RUF003",  # ambiguous characters
  "RUF012",  # Mutable default in class attribute is just how django rolls
  "RUF100",  # Unused noqa; problematic when run in isolation
]

[tool.ruff.lint.flake8-pytest-style]
parametrize-values-type = "tuple"
